lib/flserial_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('package:flserial/flserial')
library;

import 'dart:ffi' as ffi;

/// Inicjalizuje Dart Native API. Musi być wywołane przed
/// jakąkolwiek próbą wysłania danych przez NativePort.
@ffi.Native<ffi.IntPtr Function(ffi.Pointer<ffi.Void>)>()
external int InitDartApiDL(ffi.Pointer<ffi.Void> data);

/// Tworzy nową instancję sterownika portu szeregowego.
@ffi.Native<ffi.Pointer<SerialPort> Function()>()
external ffi.Pointer<SerialPort> serial_new();

/// Zwalnia pamięć i zamyka port.
@ffi.Native<ffi.Void Function(ffi.Pointer<SerialPort>)>()
external void serial_free(ffi.Pointer<SerialPort> sp);

/// Rejestruje ID portu Darta, do którego C++ będzie wysyłać dane i zdarzenia.
@ffi.Native<ffi.Void Function(ffi.Pointer<SerialPort>, ffi.Int64)>()
external void register_port(ffi.Pointer<SerialPort> sp, int port_id);

/// Otwiera port z zaawansowaną konfiguracją.
/// parity: 0=none, 1=odd, 2=even
/// stopBits: 1 lub 2
@ffi.Native<
  ffi.Bool Function(
    ffi.Pointer<SerialPort>,
    ffi.Pointer<ffi.Char>,
    ffi.Int,
    ffi.Int,
    ffi.Int,
    ffi.Int,
  )
>()
external bool serial_open_ext(
  ffi.Pointer<SerialPort> sp,
  ffi.Pointer<ffi.Char> path,
  int baud,
  int dataBits,
  int stopBits,
  int parity,
);

/// Zamyka fizyczne połączenie z portem.
@ffi.Native<ffi.Void Function(ffi.Pointer<SerialPort>)>()
external void serial_close(ffi.Pointer<SerialPort> sp);

/// Wysyła surowe bajty do portu.
@ffi.Native<
  ffi.Void Function(ffi.Pointer<SerialPort>, ffi.Pointer<ffi.Uint8>, ffi.Int)
>()
external void serial_write(
  ffi.Pointer<SerialPort> sp,
  ffi.Pointer<ffi.Uint8> data,
  int length,
);

/// Ustawia stan linii DTR (Data Terminal Ready).
@ffi.Native<ffi.Void Function(ffi.Pointer<SerialPort>, ffi.Int)>()
external void serial_set_dtr(ffi.Pointer<SerialPort> sp, int active);

/// Ustawia stan linii RTS (Request To Send).
@ffi.Native<ffi.Void Function(ffi.Pointer<SerialPort>, ffi.Int)>()
external void serial_set_rts(ffi.Pointer<SerialPort> sp, int active);

/// Pobiera stan linii wejściowych jako maskę bitową:
/// Bit 0: CTS, Bit 1: DSR, Bit 2: RI, Bit 3: DCD
@ffi.Native<ffi.Int Function(ffi.Pointer<SerialPort>)>()
external int serial_get_modem_status(ffi.Pointer<SerialPort> sp);

final class SerialPort extends ffi.Opaque {}
